Fix dialog layout issues

--- a/styles/btn.css
+++ b/styles/btn.css
@@ -63,4 +63,5 @@
 
 .btn-ok {
   max-width: 100%;
+  padding: 10px 37px;
 }
